feat(app): initial login version
Creation of the first version of the angular-playground-login application, including simple login and sign-up pages.

Also including a mock service that delays the return by 2 seconds to create the illusion of conectivity, and a couple of shared libraries like constants and animations.

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,34 @@
-/* You can add global styles to this file, and also import other style files */
+/* Imports */
+@import '~normalize.css';
+
+/* Global Styles */
+html,
+body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+.page {
+  margin: 16px auto;
+  padding: 0 16px;
+  max-width: 500px;
+}
+
+.bottom-buttons {
+  display: flex;
+  flex-direction: column;
+}
+
+.bottom-buttons button {
+  margin: 8px 16px;
+}
+
+.bottom-loading {
+  display: flex;
+  justify-content: center;
+  transition: all 0.3s ease;
+}
